# bit_set

./: .appveyor.yml  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  vcpkg.json
.github/: codecov.yml  dependabot.yml
.github/vcpkg/toolchains/: gcc-trunk.cmake  libcxx.cmake
.github/vcpkg/triplets/: x64-linux-gcc-trunk.cmake  x64-linux-libcxx.cmake
.github/workflows/: appleclang.yml  clang-cl.yml  clang-tidy.yml  clang.yml  codeql.yml  consumption.yml  coverage.yml  gcc.yml  mingw.yml  msvc.yml  sanitizers.yml  scorecard.yml
benchmark/: CMakeLists.txt
benchmark/src/bitset/: sieve.cpp
benchmark/src/set/: sieve.cpp
cmake/: bit_setConfig.cmake.in
include/aux/bitset/: sieve.hpp
include/aux/set/: sieve.hpp
include/ext/boost/: dynamic_bitset.hpp
include/ext/boost/container/: flat_set.hpp
include/ext/boost/container/flat_set/: comparator.hpp
include/ext/boost/dynamic_bitset/: iterator.hpp  predicates.hpp
include/ext/std/: bitset.hpp  ranges.hpp
include/ext/std/bitset/: iterator.hpp  operators.hpp  predicates.hpp
include/ext/xstd/: bitset.hpp
include/opt/bitset/: sieve.hpp
include/opt/set/: sieve.hpp
include/xstd/: base_array.hpp  bit.hpp  bit_array.hpp  bit_set.hpp  bitset.hpp  int_set.hpp  proxy.hpp  utility.hpp
include/xstd/bit/: array.hpp  intrin.hpp  pred.hpp
include/xstd/detail/: array.hpp  intrin.hpp  pred.hpp
include/xstd/proxy/: bidirectional.hpp  forward.hpp  random_access.hpp
include/xstd/proxy copy/: bidirectional.hpp
test/: CMakeLists.txt
test/include/: concepts.hpp  exhaustive.hpp  iostream.hpp  legacy.hpp  primitive.hpp  traits.hpp
test/include/adaptor/: bit_set.hpp  bitset.hpp  dynamic_bitset.hpp  flat_set.hpp  std_bitset.hpp  xstd_bitset.hpp
test/include/aux/: bit_set.hpp
test/include/bitset/: compatible.hpp  exhaustive.hpp  factory.hpp  primitives.hpp  sieve.hpp
test/include/bitset/compatible/: bit_set.hpp  bitset.hpp  dynamic_bitset.hpp  int_set.hpp
test/include/legacy/: bitset.hpp  int_set.hpp
test/include/set/: algorithms.hpp  composable.hpp  exhaustive.hpp  parallel.hpp  primitives.hpp  sieve.hpp
test/include/set/compatible/: algorithm.hpp  flat_set.hpp  iterator.hpp  set.hpp
test/src/: builtin.cpp  test0.cpp  test1.cpp  test2.cpp  test3.cpp
test/src/array/: type_traits.cpp
test/src/bitset/: o0.cpp  o1.cpp  o2.cpp  o3.cpp  o4.cpp  primes.cpp  sieve.cpp  type_traits.cpp
test/src/block/: type_traits.cpp
test/src/set/: constexpr.cpp  implicit.cpp  o0.cpp  o1.cpp  o2.cpp  o3.cpp  o4.cpp  primes.cpp  sieve.cpp  type_traits.cpp
